# triagem_med

./: .env_exemple  .gitignore  README.en.md  README.md  pyproject.toml
docs/: Short Paper AgentTriagem.docx  artigo_tecnico.md
models/: colab.ipynb  model.py
scripts/: demo.py  setup_database.py
src/: api.py  config.py  mcp_server.py
src/agents/database/: __init__.py  agent.py  tools.py
src/agents/notification/: __init__.py  agent.py  tools.py
src/agents/orchestrator/: agent.py
src/agents/report/: __init__.py  agent.py  tools.py
src/agents/triagem/: __init__.py  agent.py  tools.py
src/client/: chat.html
src/database/: __init__.py  connection.py  models.py  seed.py
